<resources>
    <string name="app_name">抽題小幫手</string>
    <string name="new_exercise">抽新題</string>
    <string name="wrong_exercise">錯題</string>
    <string name="update_exercise">題庫更新</string>
    <string name="subject">科目</string>
    <string name="chapter">章節</string>
    <string name="total">總題數(題號1~?)</string>
    <string name="draw_lot">抽！</string>
    <string name="num">題號：</string>
    <string name="pass">pass</string>
    <string name="remain_count">剩餘題數</string>
    <string name="wrong_count">錯題數</string>
    <string name="home_title">Home</string>
    <string name="subject_title">選擇科目</string>
    <string name="exercise_title">題目</string>
    <string name="update_title">更新題庫</string>
    <string name="save">save</string>
    <string name="restart">Restart</string>
    <string name="delete">delete</string>
    <string name="total_label">總題數</string>
    <string name="delete_question">確定要刪除此科目嗎？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="dash">-</string>
    <string name="right">right</string>
    <string name="wrong">wrong</string>
    <string name="add">Add</string>

</resources>